crates/chain-config/src/config/snapshots/fuel_core_chain_config__config__chain__tests__snapshot_local_testnet_config.snap
---
source: crates/chain-config/src/config/chain.rs
expression: json
---
{
  "chain_name": "local_testnet",
  "consensus_parameters": {
    "V2": {
      "tx_params": {
        "V1": {
          "max_inputs": 255,
          "max_outputs": 255,
          "max_witnesses": 255,
          "max_gas_per_tx": 100000000,
          "max_size": 112640,
          "max_bytecode_subsections": 255
        }
      },
      "predicate_params": {
        "V1": {
          "max_predicate_length": 1048576,
          "max_predicate_data_length": 1048576,
          "max_message_data_length": 1048576,
          "max_gas_per_predicate": 100000000
        }
      },
      "script_params": {
        "V2": {
          "max_script_length": 1048576,
          "max_script_data_length": 1048576,
          "max_storage_slot_length": 1048576
        }
      },
      "contract_params": {
        "V1": {
          "contract_max_size": 102400,
          "max_storage_slots": 255
        }
      },
      "fee_params": {
        "V1": {
          "gas_price_factor": 1000000000,
          "gas_per_byte": 4
        }
      },
      "chain_id": 0,
      "gas_costs": {
        "V7": {
          "add": 1,
          "addi": 1,
          "and": 1,
          "andi": 1,
          "bal": 13,
          "bhei": 1,
          "bhsh": 1,
          "burn": 132,
          "cb": 1,
          "cfsi": 1,
          "div": 1,
          "divi": 1,
          "eck1": 951,
          "ecr1": 3000,
          "eq": 1,
          "exp": 1,
          "expi": 1,
          "flag": 1,
          "gm": 1,
          "gt": 1,
          "gtf": 1,
          "ji": 1,
          "jmp": 1,
          "jne": 1,
          "jnei": 1,
          "jnzi": 1,
          "jmpf": 1,
          "jmpb": 1,
          "jnzf": 1,
          "jnzb": 1,
          "jnef": 1,
          "jneb": 1,
          "lb": 1,
          "log": 9,
          "lt": 1,
          "lw": 1,
          "mint": 135,
          "mlog": 1,
          "mod": 1,
          "modi": 1,
          "move": 1,
          "movi": 1,
          "mroo": 2,
          "mul": 1,
          "muli": 1,
          "mldv": 1,
          "niop": 1,
          "noop": 1,
          "not": 1,
          "or": 1,
          "ori": 1,
          "poph": 2,
          "popl": 2,
          "pshh": 2,
          "pshl": 2,
          "ret_contract": 13,
          "rvrt_contract": 13,
          "sb": 1,
          "sll": 1,
          "slli": 1,
          "srl": 1,
          "srli": 1,
          "sub": 1,
          "subi": 1,
          "sw": 1,
          "time": 1,
          "tr": 105,
          "tro": 60,
          "wdcm": 1,
          "wqcm": 1,
          "wdop": 1,
          "wqop": 1,
          "wdml": 1,
          "wqml": 1,
          "wddv": 1,
          "wqdv": 2,
          "wdmd": 3,
          "wqmd": 4,
          "wdam": 2,
          "wqam": 3,
          "wdmm": 3,
          "wqmm": 3,
          "xor": 1,
          "xori": 1,
          "ecop": 3500,
          "aloc": {
            "LightOperation": {
              "base": 2,
              "units_per_gas": 214
            }
          },
          "bsiz": {
            "LightOperation": {
              "base": 17,
              "units_per_gas": 790
            }
          },
          "bldd": {
            "LightOperation": {
              "base": 15,
              "units_per_gas": 272
            }
          },
          "cfe": {
            "LightOperation": {
              "base": 2,
              "units_per_gas": 214
            }
          },
          "cfei": {
            "LightOperation": {
              "base": 2,
              "units_per_gas": 214
            }
          },
          "call": {
            "LightOperation": {
              "base": 144,
              "units_per_gas": 214
            }
          },
          "ccp": {
            "LightOperation": {
              "base": 15,
              "units_per_gas": 103
            }
          },
          "croo": {
            "LightOperation": {
              "base": 1,
              "units_per_gas": 1
            }
          },
          "csiz": {
            "LightOperation": {
              "base": 17,
              "units_per_gas": 790
            }
          },
          "ed19": {
            "LightOperation": {
              "base": 3000,
              "units_per_gas": 214
            }
          },
          "k256": {
            "LightOperation": {
              "base": 11,
              "units_per_gas": 214
            }
          },
          "ldc": {
            "LightOperation": {
              "base": 15,
              "units_per_gas": 272
            }
          },
          "logd": {
            "LightOperation": {
              "base": 26,
              "units_per_gas": 64
            }
          },
          "mcl": {
            "LightOperation": {
              "base": 1,
              "units_per_gas": 3333
            }
          },
          "mcli": {
            "LightOperation": {
              "base": 1,
              "units_per_gas": 3333
            }
          },
          "mcp": {
            "LightOperation": {
              "base": 1,
              "units_per_gas": 2000
            }
          },
          "mcpi": {
            "LightOperation": {
              "base": 3,
              "units_per_gas": 2000
            }
          },
          "meq": {
            "LightOperation": {
              "base": 1,
              "units_per_gas": 2500
            }
          },
          "retd_contract": {
            "LightOperation": {
              "base": 29,
              "units_per_gas": 62
            }
          },
          "s256": {
            "LightOperation": {
              "base": 2,
              "units_per_gas": 214
            }
          },
          "smo": {
            "LightOperation": {
              "base": 209,
              "units_per_gas": 55
            }
          },
          "epar": {
            "HeavyOperation": {
              "base": 69000,
              "gas_per_unit": 52000
            }
          },
          "storage_read_cold": {
            "LightOperation": {
              "base": 100,
              "units_per_gas": 123
            }
          },
          "storage_read_hot": {
            "LightOperation": {
              "base": 10,
              "units_per_gas": 123
            }
          },
          "storage_write": {
            "LightOperation": {
              "base": 10,
              "units_per_gas": 1234
            }
          },
          "storage_clear": {
            "LightOperation": {
              "base": 10,
              "units_per_gas": 4
            }
          },
          "contract_root": {
            "LightOperation": {
              "base": 75,
              "units_per_gas": 1
            }
          },
          "state_root": {
            "LightOperation": {
              "base": 412,
              "units_per_gas": 1
            }
          },
          "new_storage_per_byte": 1,
          "vm_initialization": {
            "HeavyOperation": {
              "base": 2000,
              "gas_per_unit": 0
            }
          }
        }
      },
      "base_asset_id": "0000000000000000000000000000000000000000000000000000000000000000",
      "block_gas_limit": 100000000,
      "block_transaction_size_limit": 129024,
      "privileged_address": "0000000000000000000000000000000000000000000000000000000000000000"
    }
  },
  "genesis_state_transition_version": 34,
  "consensus": {
    "PoAV2": {
      "genesis_signing_key": "22ec92c3105c942a6640bdc4e4907286ec4728e8cfc0d8ac59aad4d8e1ccaefb",
      "signing_key_overrides": {}
    }
  }
}
